# ProxifyAPI

./: .gitignore  Cargo.toml  README.md  apis.template.json  launch.sh
src/: main.rs  proxy.rs
src/apis/: crud.rs  mod.rs
