[package]
name = "swaplens-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-server = {version="0.7.1", features=["tls-rustls"]}
base64 = "0.22.1"
bincode = "1.3.3"
cookie = {version="0.18.1",features=["percent-encode"]}
env_logger = "0.11.5"
log = "0.4.22"
reqwest = "0.12.5"
serde = {version="1.0.204",features=["derive"]}
serde_json = "1.0.122"
sled = "0.34.7"
tokio = {version="1.39.2", features=["full"]}
tower-http = {version="0.5.2",features=["cors"]}
